Отключение лишнего в конфиге

--- a/BackupConfigs/config.json
+++ b/BackupConfigs/config.json
@@ -8,7 +8,7 @@
         "Create_Backup_Rar_ArchiveName": "backup1-{datetime}",
         "Create_Backup_Rar_Keys": "a -r -m5 -dh -ep1",
         "Create_Backup_Rar_ArchiveExtension": "rar",
-        "Copy-Robocopy": true,
+        "Copy-Robocopy": false,
         "Copy-Robocopy_SRC": "C:\\test\\rar",
         "Copy-Robocopy_DST": "C:\\test\\copy",
         "Copy-Robocopy_RobocopyPath": "C:\\Windows\\System32\\Robocopy.exe",
@@ -16,7 +16,7 @@
         "Copy-Robocopy_LogPath": "C:\\test\\copy",
         "Copy-Robocopy_Keys": "/MIR /Z /R:3 /W:10",
         "Copy-Robocopy_CheckFreeSpace": false,
-        "Remove-OldFiles": true,
+        "Remove-OldFiles": false,
         "Remove-OldFiles-Path": "C:\\test\\rar",
         "Remove-OldFiles-DaysOld": "30",
         "Remove-OldFiles-KeepCount": "5",
