--- a/BackupConfigs/config.json
+++ b/BackupConfigs/config.json
@@ -5,8 +5,34 @@
         "Create_Backup_Rar": true,
         "Create_Backup_Rar_SRC": "C:\\test\\backup1",
         "Create_Backup_Rar_DST": "C:\\test\\rar",
-        "Create_Backup_Rar_ArchiveName": "backup1-{datetime}",
-        "Create_Backup_Rar_Keys": "a -r -m5 -dh -ep1",
+        "Create_Backup_Rar_ArchiveName": "{SRCfolder}_{computer}_{datetime}",
+        "Create_Backup_Rar_Keys": "a -t -r -m5 -dh -tl -rr1p -s -ep2",
+        "Create_Backup_Rar_ArchiveExtension": "rar",
+        "Copy-Robocopy": false,
+        "Copy-Robocopy_SRC": "C:\\test\\rar",
+        "Copy-Robocopy_DST": "C:\\test\\copy",
+        "Copy-Robocopy_RobocopyPath": "C:\\Windows\\System32\\Robocopy.exe",
+        "Copy-Robocopy_LogName": "copy_log_{datetime}",
+        "Copy-Robocopy_LogPath": "C:\\test\\copy",
+        "Copy-Robocopy_Keys": "/MIR /Z /R:3 /W:10",
+        "Copy-Robocopy_CheckFreeSpace": false,
+        "Remove-OldFiles": false,
+        "Remove-OldFiles-Path": "C:\\test\\rar",
+        "Remove-OldFiles-DaysOld": "30",
+        "Remove-OldFiles-KeepCount": "5",
+        "Send-Mail": false,
+        "Send-Mail-From": "Fromadrres@domail.loc",
+        "Send-Mail-To": "toadrres@domail.loc",
+        "Send-Mail-Subject": "Резервная копия 1"
+    },
+    {
+        "Enabled": true,
+        "Name": "Резервная копия 2",
+        "Create_Backup_Rar": true,
+        "Create_Backup_Rar_SRC": "C:\\test\\backup2",
+        "Create_Backup_Rar_DST": "C:\\test\\rar",
+        "Create_Backup_Rar_ArchiveName": "{SRCfolder}_{computer}_{datetime}",
+        "Create_Backup_Rar_Keys": "a -t -r -m5 -dh -tl -rr1p -s -ep2",
         "Create_Backup_Rar_ArchiveExtension": "rar",
         "Copy-Robocopy": false,
         "Copy-Robocopy_SRC": "C:\\test\\rar",
